syntax = "proto3";
package injective.crypto.v1beta1.ethsecp256k1;

message PubKey {
  bytes key = 1;
}
